# talos

./: CMakeLists.txt  README.md
cmake/: target-i686-talos.cmake
doc/: references.md
src/: CMakeLists.txt
src/abi/: CMakeLists.txt  heap.cpp  heap.hpp  newlib-stubs.cpp  sysconf.cpp  terminate.cpp
src/config/i686-ibmpc/: config-memory.hpp  config-timer.hpp
src/contrib/: CMakeLists.txt
src/contrib/acpica/: CMakeLists.txt  README.md
src/contrib/dlea_malloc/: malloc.c  wrapper.cpp
src/cpu/x86/: CMakeLists.txt  gdt.asm  gdt.cpp  gdt.hpp  idt.asm  idt.cpp  idt.hpp  interrupt.cpp  io.cpp  io.hpp  memory.cpp  memory.hpp  paging.cpp  paging.hpp  registers.asm  registers.hpp
src/driver/: CMakeLists.txt
src/driver/acpi/: CMakeLists.txt  acpi.cpp  acpi.hpp  acpica.c  acpica.cpp
src/driver/boot/multiboot/: multiboot1.cpp  multiboot1.hpp
src/driver/serial/: uart.cpp  uart.hpp
src/driver/timer/: pit.hpp
src/driver/video/vga/: vga.cpp  vga.hpp
src/hal/: interrupt.hpp  io.hpp  memory.hpp  terminate.hpp
src/kernel/: CMakeLists.txt  job.cpp  job.hpp  main.cpp  main.hpp  start.cpp  start.hpp  timer.cpp  timer.hpp
src/libk/: CMakeLists.txt  assert.hpp  error.cpp  error.hpp  exceptions.cpp  exceptions.hpp  logging.cpp  logging.hpp  memory.cpp  memory.hpp  mutex.cpp  mutex.hpp  string.hpp  terminate.cpp  terminate.hpp  util.cpp  util.hpp
src/platform/ibmpc/: CMakeLists.txt  console.cpp  console.hpp  crt0.asm  crt0.hpp  elf.hpp  grub.cfg  init.cpp  link.hpp  link.ld  logging.cpp  make-grub-iso  serial.cpp  serial.hpp  start.cpp
toolchain/: CMakeLists.txt  binutils-2.43.patch  gcc-14.2.0.patch  newlib-3.0.0.patch
