add_library(
    contrib-acpica STATIC
    EXCLUDE_FROM_ALL

    dist/source/components/dispatcher/dsargs.c
    dist/source/components/dispatcher/dscontrol.c
    dist/source/components/dispatcher/dsdebug.c
    dist/source/components/dispatcher/dsfield.c
    dist/source/components/dispatcher/dsinit.c
    dist/source/components/dispatcher/dsmethod.c
    dist/source/components/dispatcher/dsmthdat.c
    dist/source/components/dispatcher/dsobject.c
    dist/source/components/dispatcher/dsopcode.c
    dist/source/components/dispatcher/dspkginit.c
    dist/source/components/dispatcher/dsutils.c
    dist/source/components/dispatcher/dswexec.c
    dist/source/components/dispatcher/dswload2.c
    dist/source/components/dispatcher/dswload.c
    dist/source/components/dispatcher/dswscope.c
    dist/source/components/dispatcher/dswstate.c
    dist/source/components/events/evevent.c
    dist/source/components/events/evglock.c
    dist/source/components/events/evgpeblk.c
    dist/source/components/events/evgpe.c
    dist/source/components/events/evgpeinit.c
    dist/source/components/events/evgpeutil.c
    dist/source/components/events/evhandler.c
    dist/source/components/events/evmisc.c
    dist/source/components/events/evregion.c
    dist/source/components/events/evrgnini.c
    dist/source/components/events/evsci.c
    dist/source/components/events/evxface.c
    dist/source/components/events/evxfevnt.c
    dist/source/components/events/evxfgpe.c
    dist/source/components/events/evxfregn.c
    dist/source/components/executer/exconcat.c
    dist/source/components/executer/exconfig.c
    dist/source/components/executer/exconvrt.c
    dist/source/components/executer/excreate.c
    dist/source/components/executer/exdebug.c
    dist/source/components/executer/exdump.c
    dist/source/components/executer/exfield.c
    dist/source/components/executer/exfldio.c
    dist/source/components/executer/exmisc.c
    dist/source/components/executer/exmutex.c
    dist/source/components/executer/exnames.c
    dist/source/components/executer/exoparg1.c
    dist/source/components/executer/exoparg2.c
    dist/source/components/executer/exoparg3.c
    dist/source/components/executer/exoparg6.c
    dist/source/components/executer/exprep.c
    dist/source/components/executer/exregion.c
    dist/source/components/executer/exresnte.c
    dist/source/components/executer/exresolv.c
    dist/source/components/executer/exresop.c
    dist/source/components/executer/exserial.c
    dist/source/components/executer/exstore.c
    dist/source/components/executer/exstoren.c
    dist/source/components/executer/exstorob.c
    dist/source/components/executer/exsystem.c
    dist/source/components/executer/extrace.c
    dist/source/components/executer/exutils.c
    dist/source/components/hardware/hwacpi.c
    dist/source/components/hardware/hwesleep.c
    dist/source/components/hardware/hwgpe.c
    dist/source/components/hardware/hwpci.c
    dist/source/components/hardware/hwregs.c
    dist/source/components/hardware/hwsleep.c
    dist/source/components/hardware/hwtimer.c
    dist/source/components/hardware/hwvalid.c
    dist/source/components/hardware/hwxface.c
    dist/source/components/hardware/hwxfsleep.c
    dist/source/components/namespace/nsaccess.c
    dist/source/components/namespace/nsalloc.c
    dist/source/components/namespace/nsarguments.c
    dist/source/components/namespace/nsconvert.c
    dist/source/components/namespace/nsdump.c
    dist/source/components/namespace/nsdumpdv.c
    dist/source/components/namespace/nseval.c
    dist/source/components/namespace/nsinit.c
    dist/source/components/namespace/nsload.c
    dist/source/components/namespace/nsnames.c
    dist/source/components/namespace/nsobject.c
    dist/source/components/namespace/nsparse.c
    dist/source/components/namespace/nspredef.c
    dist/source/components/namespace/nsprepkg.c
    dist/source/components/namespace/nsrepair2.c
    dist/source/components/namespace/nsrepair.c
    dist/source/components/namespace/nssearch.c
    dist/source/components/namespace/nsutils.c
    dist/source/components/namespace/nswalk.c
    dist/source/components/namespace/nsxfeval.c
    dist/source/components/namespace/nsxfname.c
    dist/source/components/namespace/nsxfobj.c
    dist/source/components/parser/psargs.c
    dist/source/components/parser/psloop.c
    dist/source/components/parser/psobject.c
    dist/source/components/parser/psopcode.c
    dist/source/components/parser/psopinfo.c
    dist/source/components/parser/psparse.c
    dist/source/components/parser/psscope.c
    dist/source/components/parser/pstree.c
    dist/source/components/parser/psutils.c
    dist/source/components/parser/pswalk.c
    dist/source/components/parser/psxface.c
    dist/source/components/resources/rsaddr.c
    dist/source/components/resources/rscalc.c
    dist/source/components/resources/rscreate.c
    dist/source/components/resources/rsdump.c
    dist/source/components/resources/rsdumpinfo.c
    dist/source/components/resources/rsinfo.c
    dist/source/components/resources/rsio.c
    dist/source/components/resources/rsirq.c
    dist/source/components/resources/rslist.c
    dist/source/components/resources/rsmemory.c
    dist/source/components/resources/rsmisc.c
    dist/source/components/resources/rsserial.c
    dist/source/components/resources/rsutils.c
    dist/source/components/resources/rsxface.c
    dist/source/components/tables/tbdata.c
    dist/source/components/tables/tbfadt.c
    dist/source/components/tables/tbfind.c
    dist/source/components/tables/tbinstal.c
    dist/source/components/tables/tbprint.c
    dist/source/components/tables/tbutils.c
    dist/source/components/tables/tbxface.c
    dist/source/components/tables/tbxfload.c
    dist/source/components/tables/tbxfroot.c
    dist/source/components/utilities/utaddress.c
    dist/source/components/utilities/utalloc.c
    dist/source/components/utilities/utascii.c
    dist/source/components/utilities/utbuffer.c
    dist/source/components/utilities/utcache.c
    dist/source/components/utilities/utcksum.c
    dist/source/components/utilities/utclib.c
    dist/source/components/utilities/utcopy.c
    dist/source/components/utilities/utdebug.c
    dist/source/components/utilities/utdecode.c
    dist/source/components/utilities/utdelete.c
    dist/source/components/utilities/uterror.c
    dist/source/components/utilities/uteval.c
    dist/source/components/utilities/utexcep.c
    dist/source/components/utilities/utglobal.c
    dist/source/components/utilities/uthex.c
    dist/source/components/utilities/utids.c
    dist/source/components/utilities/utinit.c
    dist/source/components/utilities/utlock.c
    dist/source/components/utilities/utmath.c
    dist/source/components/utilities/utmisc.c
    dist/source/components/utilities/utmutex.c
    dist/source/components/utilities/utnonansi.c
    dist/source/components/utilities/utobject.c
    dist/source/components/utilities/utosi.c
    dist/source/components/utilities/utownerid.c
    dist/source/components/utilities/utpredef.c
    # dist/source/components/utilities/utprint.c
    dist/source/components/utilities/utresdecode.c
    dist/source/components/utilities/utresrc.c
    dist/source/components/utilities/utstate.c
    dist/source/components/utilities/utstring.c
    dist/source/components/utilities/utstrsuppt.c
    dist/source/components/utilities/utstrtoul64.c
    dist/source/components/utilities/uttrack.c
    dist/source/components/utilities/utuuid.c
    dist/source/components/utilities/utxface.c
    dist/source/components/utilities/utxferror.c
    dist/source/components/utilities/utxfinit.c
    dist/source/components/utilities/utxfmutex.c
)

target_include_directories(contrib-acpica PUBLIC dist/source/include)
target_compile_definitions(contrib-acpica PUBLIC BUILDING_ACPICA ACPI_DEBUG_OUTPUT)
target_compile_options(contrib-acpica PUBLIC -Wno-pedantic -Wno-unused)
